# realsense_normal_plane_computation

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/magnecko_realsense_node/: depth_metrics.h  magnecko_realsense_node.hpp
realsense_msgs/: CMakeLists.txt  package.xml
realsense_msgs/msg/: Realsense.msg
realsense_normal_plane_computation/: CMakeLists.txt  package.xml
realsense_normal_plane_computation/include/magnecko_realsense_node/: magnecko_realsense_node.hpp
realsense_normal_plane_computation/src/: magnecko_realsense_node.cpp
src/: magnecko_realsense_node.cpp
